FIX : dropdown max-height overflow issue

--- a/client/src/components/dropdown/Dropdown.scss
+++ b/client/src/components/dropdown/Dropdown.scss
@@ -46,10 +46,9 @@
     width: 100%;
     left: 0;
     background-color: #ffffff;
-    overflow: hidden;
     border-radius: 0.2rem;
 
-    z-index: 9;
+    z-index: 99;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
       rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 
